# storage/api-docs/api-docs.json
@@ -277,6 +277,24 @@
                         "example": "kg"
                     }
                 ],
+                "requestBody": {
+                    "description": "Upload Image",
+                    "required": false,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "properties": {
+                                    "image": {
+                                        "description": "Image to upload",
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "json schema",
@@ -1185,6 +1203,16 @@
                             "type": "string"
                         },
                         "example": "8"
+                    },
+                    {
+                        "name": "date",
+                        "in": "query",
+                        "description": "Enter Date",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "100"
                     },
                     {
                         "name": "notes",
